--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
     <string name="app_name">TMT</string>
+    <string name="about_tmta">Olá! Vou te explicar o que você precisa fazer durante o Trial Making Test A (TMT-A).
+        Esse é um teste que nos ajuda a entender como sua mente está funcionando em termos de atenção, concentração e
+        rapidez para organizar informações. Não é um teste de certo ou errado, mas sim para avaliar o seu desempenho.</string>
+    <string name="about_tmta_part2">Na próxima tela haverão números de 1 a 25 espalhados de forma desorganizada.
+        Seu objetivo é ligar esses números na ordem correta, do número 1 até o número 25.
+        Para fazer isso, você vai usar o seu dedo para traçar uma linha conectando os números.</string>
+    <string name="about_tmta_part3">Quando o teste começar, você deve olhar para os números e começar a ligar o 1 ao 2,
+        depois o 2 ao 3, e assim por diante, até o número 25. A ideia é que você faça isso da forma mais rápida possível,
+        como no exemplo abaixo. Mas lembre-se, não é um teste de certo ou errado.</string>
+
+    <string name="about_tmtb"> Agora vou te explicar o que você precisa fazer durante o Trial Making Test B (TMT-B).
+        Esse é um teste que nos ajuda a entender como sua mente está funcionando em termos de flexibilidade cognitiva,
+        atenção, concentração e rapidez em alternar entre diferentes tipos de informações.
+        Não é um teste de certo ou errado, mas sim para avaliar o seu desempenho.</string>
+
+    <string name="about_tmtb_part2">Na próxima tela, haverão números de 1 a 13 e letras de A a L espalhados de forma desorganizada.
+        Seu objetivo é ligar os números e as letras alternadamente, seguindo a ordem correta: 1-A, 2-B, 3-C, e assim por diante,
+        até o número 13 e a letra L. Para fazer isso, você vai usar o seu dedo para traçar uma linha conectando os núm
+        eros e as letras na ordem correta.</string>
+
+    <string name="about_tmtb_part3"> Quando o teste começar, você deve olhar para os números e as letras e começar a ligar
+        o número 1 à letra A, depois o número 2 à letra B, o número 3 à letra C, e assim por diante, até o número 13 e a letra L.
+        A ideia é fazer isso o mais rápido possível, como no exemplo abaixo. Mas lembre-se, não é um teste de certo ou errado.</string>
+
+
 </resources>
